[package]
name = "domafic"
version = "0.1.0"
authors = ["Taylor Cramer <cramertj@cs.washington.edu>"]

[[bin]]
name = "domafic-webplatform-test"

[dependencies]
either_n = { version = "0.2.0", optional = true }
webplatform = { version = "0.4.2", optional = true }

[features]
default = ["use_either_n", "use_std", "use_webplatform"]
use_either_n = ["either_n"]
use_std = []
use_webplatform = ["webplatform", "use_std"]
